chore: code review fixes